--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 0 0 10px 0;
     color: #82a5ca;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
